Export dataset for manual validation (the "gold standard") c.f. #59

--- a/clean_data.ipynb
+++ b/clean_data.ipynb
@@ -218,6 +218,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Export the dataset for determining the manual gold standard\n",
+    "n_rows_gold_standard = 1000\n",
+    "seed = 42 # fixed seed\n",
+    "YEAR_RANGE = range(2011,2022+1) # Years of interest are 2011 to 2022\n",
+    "\n",
+    "sampled_pubs = pubs.sample(n=1000, random_state=seed)\n",
+    "\n",
+    "print(\n",
+    "    f\"Exporting {n_rows_gold_standard} rows of {len(pubs)}.\\n\"\n",
+    "    f\"That is {n_rows_gold_standard/len(pubs)*100} percent of the full dataset.\"\n",
+    "    )\n",
+    "\n",
+    "sampled_pubs.to_csv('data/raw/sampled_pubs_for_gold_standard.csv', index=False)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -239,7 +260,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "duplicates_title = pubs_clean[pubs_clean.duplicated(subset=[\"title\"], keep=False)].sort_values(by=\"title\")\n",
+    "duplicates_title = pubs[pubs.duplicated(subset=[\"title\"], keep=False)].sort_values(by=\"title\")\n",
     "duplicates_title"
    ]
   },
@@ -249,7 +270,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "duplicates_name = pubs_clean[pubs_clean.duplicated(subset=[\"phd_name\"], keep=False)].sort_values(by='phd_name')\n",
+    "duplicates_name = pubs[pubs.duplicated(subset=[\"author_name\"], keep=False)].sort_values(by='author_name')\n",
     "duplicates_name"
    ]
   },
@@ -298,7 +319,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
