--- a/clean_data.ipynb
+++ b/clean_data.ipynb
@@ -214,6 +214,9 @@
     "# Ensure correct data types and fill missing values with a suitable placeholder if necessary\n",
     "pubs = pubs.convert_dtypes()\n",
     "\n",
+    "# Make naming hopefully a bit clearer\n",
+    "pubs.rename(columns={\"author_name\": \"phd_name\"}, inplace=True)\n",
+    "\n",
     "pubs"
    ]
   },
@@ -224,7 +227,7 @@
    "outputs": [],
    "source": [
     "# Export the dataset for determining the manual gold standard\n",
-    "n_rows_gold_standard = 1000\n",
+    "n_rows_gold_standard = 15\n",
     "seed = 42 # fixed seed\n",
     "\n",
     "sampled_pubs = pubs.sample(n=1000, random_state=seed)\n",
@@ -269,7 +272,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "duplicates_name = pubs[pubs.duplicated(subset=[\"author_name\"], keep=False)].sort_values(by='author_name')\n",
+    "duplicates_name = pubs[pubs.duplicated(subset=[\"phd_name\"], keep=False)].sort_values(by='phd_name')\n",
     "duplicates_name"
    ]
   },
@@ -286,18 +289,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Export a sample of the dataset to easily share it\n",
-    "seed = 42 # fixed seed\n",
-    "\n",
-    "# Sample 100 random lines from the DataFrame\n",
-    "#sampled_pubs = pubs.sample(n=50, random_state=seed)\n",
-    "\n",
-    "# Export the sampled DataFrame to a CSV file\n",
-    "#sampled_pubs.to_csv('data/cleaned/sampled_pubs.csv', index=False)\n",
-    "\n",
-    "# Export the sampled DataFrame to a CSV file\n",
-    "pubs.rename(columns={\"author_name\": \"phd_name\"}, inplace=True)\n",
-    "\n",
     "pubs.to_csv('data/cleaned/pubs.csv', index=False)"
    ]
   }
