Export correct number of rows for sample

--- a/clean_data.ipynb
+++ b/clean_data.ipynb
@@ -230,7 +230,7 @@
     "n_rows_gold_standard = 15\n",
     "seed = 42 # fixed seed\n",
     "\n",
-    "sampled_pubs = pubs.sample(n=1000, random_state=seed)\n",
+    "sampled_pubs = pubs.sample(n=n_rows_gold_standard, random_state=seed)\n",
     "\n",
     "print(\n",
     "    f\"Exporting {n_rows_gold_standard} rows of {len(pubs)}.\\n\"\n",
