Refactor pivot from pairs to publications

--- a/clean_data.ipynb
+++ b/clean_data.ipynb
@@ -28,7 +28,8 @@
     "    remove_non_person_contributors_and_export,\n",
     "    format_name_to_lastname_firstname, \n",
     "    ensure_and_load_spacy_model, \n",
-    "    merge_near_duplicates_on_col\n",
+    "    merge_near_duplicates_on_col,\n",
+    "    pivot_per_contributor_to_per_phd\n",
     ")"
    ]
   },
@@ -102,7 +103,7 @@
    "source": [
     "# Read data\n",
     "pairs_raw = pd.read_csv(\"data/raw/pairs_sups_phds.csv\", nrows=NROWS)\n",
-    "pairs_raw = pairs_raw.convert_dtypes() # make sure all integer columns are integer dtype \n",
+    "pairs_raw = pairs_raw.convert_dtypes() # make sure all integer columns are integer dtype\n",
     "pairs_raw"
    ]
   },
@@ -151,7 +152,9 @@
     "# Standardize names\n",
     "pairs_std = pairs_filtered.copy()\n",
     "# Apply name standardization to the contributor column\n",
-    "pairs_std['contributor'] = pairs_filtered['contributor'].apply(format_name_to_lastname_firstname)"
+    "pairs_std['contributor'] = pairs_filtered['contributor'].apply(format_name_to_lastname_firstname)\n",
+    "\n",
+    "pairs_std"
    ]
   },
   {
@@ -160,59 +163,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Group by publication\n",
-    "aggregated = pairs_std.groupby([\n",
-    "        'integer_id', \n",
-    "        'thesis_identifier', \n",
-    "        'institution', \n",
-    "        'author_name', \n",
-    "        'title', \n",
-    "        'year', \n",
-    "        'language'\n",
-    "    ])\n",
-    "        \n",
-    "# Aggregate contributors into a list\n",
-    "aggregated = aggregated.agg(list)\n",
-    "\n",
-    "aggregated = aggregated.reset_index()\n",
-    "    \n",
-    "# make sure the contributor is a sequence from 1 to n_contributors\n",
-    "aggregated['contributor_order'] = aggregated['contributor_order'].apply(lambda lst: list(range(1, len(lst) + 1)))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Pivot the dataset, to get to one row per dissertation, with the contributors in columns\n",
-    "\n",
-    "# Initialize a list to hold publication data dictionaries\n",
-    "pubs_list = []\n",
-    "\n",
-    "# Iterate over each aggregated group\n",
-    "for _, row in aggregated.iterrows():\n",
-    "    # Initialize a dictionary with publication information\n",
-    "    pub_dict = {col: row[col] for col in ['integer_id', 'thesis_identifier', 'institution', 'author_name', 'title', 'year', 'language']}\n",
-    "    \n",
-    "    # Get the list of contributors and their orders for this publication\n",
-    "    contributors = row['contributor']\n",
-    "    contributor_orders = row['contributor_order']\n",
-    "    \n",
-    "    # Add contributors to the dictionary using dynamic keys\n",
-    "    for order in sorted(set(contributor_orders)):  # Ensure unique and sorted order numbers\n",
-    "        if order - 1 < len(contributors):  # Check to prevent index error\n",
-    "            pub_dict[f'contributor_{order}'] = contributors[order - 1]\n",
-    "    \n",
-    "    # Append the publication dictionary to the list\n",
-    "    pubs_list.append(pub_dict)\n",
-    "\n",
-    "# Convert the list of dictionaries to a DataFrame\n",
-    "pubs = pd.DataFrame(pubs_list).reset_index(drop=True)\n",
-    "\n",
-    "# Ensure correct data types and fill missing values with a suitable placeholder if necessary\n",
-    "pubs = pubs.convert_dtypes()\n",
+    "# Let's get one row per PhD with the contributors in columns\n",
+    "pubs = pivot_per_contributor_to_per_phd(pairs=pairs_std)\n",
     "\n",
     "# Make naming hopefully a bit clearer\n",
     "pubs.rename(columns={\"author_name\": \"phd_name\"}, inplace=True)\n",
@@ -230,14 +182,18 @@
     "n_rows_gold_standard = 15\n",
     "seed = 42 # fixed seed\n",
     "\n",
-    "sampled_pubs = pubs.sample(n=n_rows_gold_standard, random_state=seed)\n",
+    "pubs_raw = pivot_per_contributor_to_per_phd(pairs=pairs_raw)\n",
+    "\n",
+    "pairs_sampled = pubs_raw.sample(n=n_rows_gold_standard, random_state=seed)\n",
     "\n",
     "print(\n",
-    "    f\"Exporting {n_rows_gold_standard} rows of {len(pubs)}.\\n\"\n",
-    "    f\"That is {n_rows_gold_standard/len(pubs)*100} percent of the full dataset.\"\n",
+    "    f\"Exporting {n_rows_gold_standard} rows of {len(pubs_raw)}.\\n\"\n",
+    "    f\"That is {n_rows_gold_standard/len(pubs_raw)*100} percent of the full dataset.\"\n",
     "    )\n",
     "\n",
-    "sampled_pubs.to_csv('data/raw/sampled_pubs_for_gold_standard.csv', index=False)"
+    "pairs_sampled.to_csv('data/raw/sampled_pubs_for_gold_standard.csv', index=False)\n",
+    "\n",
+    "pairs_sampled"
    ]
   },
   {
