Do basic cleaning on 'raw' dataset

--- a/clean_data.ipynb
+++ b/clean_data.ipynb
@@ -101,31 +101,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Read data\n",
+    "# Read data and do basic cleaning\n",
     "pairs_raw = pd.read_csv(\"data/raw/pairs_sups_phds.csv\", nrows=NROWS)\n",
     "pairs_raw = pairs_raw.convert_dtypes() # make sure all integer columns are integer dtype\n",
-    "pairs_raw"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# remove duplicates\n",
-    "pairs_pruned = pairs_raw.drop_duplicates() \n",
-    "\n",
-    "# Remove rows where 'contributor' is NA\n",
-    "pairs_pruned = pairs_pruned.dropna(subset=['contributor'])\n",
-    "\n",
-    "# Filter to the years of interest\n",
-    "pairs_pruned = pairs_pruned.query(\n",
+    "pairs_raw = pairs_raw.query(\n",
     "    \"year in @YEAR_RANGE\"\n",
     ")\n",
+    "pairs_raw = pairs_raw.drop_duplicates()\n",
+    "pairs_raw = pairs_raw.dropna(subset=['contributor'])\n",
     "\n",
-    "# merge duplicates that only differ on affiliation column\n",
-    "#pairs_pruned = merge_near_duplicates_on_col(pairs_pruned, agg_col='institution')"
+    "pairs_raw"
    ]
   },
   {
@@ -136,7 +121,7 @@
    "source": [
     "# remove contributors that aren't people\n",
     "csv_path = \"data/removed_contributors.csv\"\n",
-    "pairs_filtered = remove_non_person_contributors_and_export(pairs_pruned, csv_path, nlp, WHITELIST, BLACKLIST)\n",
+    "pairs_filtered = remove_non_person_contributors_and_export(pairs_raw, csv_path, nlp, WHITELIST, BLACKLIST)\n",
     "\n",
     "print(f\"{len(pairs_filtered)} columns are left.\")\n",
     "\n",
