--- a/clean_data.ipynb
+++ b/clean_data.ipynb
@@ -185,7 +185,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Diagnose - Check for function duplicate of PhD candidates\n",
+    "## Diagnose - Check for functional duplicates of PhD candidates\n",
     "\n",
     "In some cases we also get:\n",
     "\n",
