Correct variable name

--- a/clean_data.ipynb
+++ b/clean_data.ipynb
@@ -169,16 +169,16 @@
     "\n",
     "pubs_raw = pivot_per_contributor_to_per_phd(pairs=pairs_raw)\n",
     "\n",
-    "pairs_sampled = pubs_raw.sample(n=n_rows_gold_standard, random_state=seed)\n",
+    "pubs_raw_sampled = pubs_raw.sample(n=n_rows_gold_standard, random_state=seed)\n",
     "\n",
     "print(\n",
     "    f\"Exporting {n_rows_gold_standard} rows of {len(pubs_raw)}.\\n\"\n",
     "    f\"That is {n_rows_gold_standard/len(pubs_raw)*100} percent of the full dataset.\"\n",
     "    )\n",
     "\n",
-    "pairs_sampled.to_csv('data/raw/sampled_pubs_for_gold_standard.csv', index=False)\n",
+    "pubs_raw_sampled.to_csv('data/raw/sampled_pubs_for_gold_standard.csv', index=False)\n",
     "\n",
-    "pairs_sampled"
+    "pubs_raw_sampled"
    ]
   },
   {
