Make it possible to run the extraction on the dataset for the manual gold standard We can specify whether we want to run the extraction on the actual dataset or just on the sample for the manual gold standard in dataset_config.yaml To facilitate this, we also moved the path specifications into the config file.

--- a/Open_Alex_Match.ipynb
+++ b/Open_Alex_Match.ipynb
@@ -143,10 +143,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset_path = 'data/cleaned/pubs_with_domain.csv'\n",
-    "output_filename = 'data/output/author_relations.csv'\n",
-    "\n",
+    "# Read configuration, including information on which subset of the data to use\n",
     "config = read_config('dataset_config.yaml')\n",
+    "\n",
+    "# Get the file name for the output file\n",
+    "output_filename = config['output_filename'] or None\n",
     "\n",
     "# Rank after which we cut of contributors.\n",
     "min_rank_contrib = config['min_rank_contrib'] or None\n",
@@ -155,7 +156,7 @@
     "else:\n",
     "    print(f\"Considering all contributors.\")\n",
     "\n",
-    "pubs_df = load_dataset(dataset_path=dataset_path, config=config)\n",
+    "pubs_df = load_dataset(config=config)\n",
     "\n",
     "pubs_df"
    ]
@@ -474,7 +475,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
