--- a/clean_data.ipynb
+++ b/clean_data.ipynb
@@ -148,7 +148,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Let's get one row per PhD with the contributors in columns\n",
+    "# Pivot pairs dataset to publications dataset\n",
+    "# This will give us one row per PhD/PhD thesis with the contributors in columns\n",
     "pubs = pivot_per_contributor_to_per_phd(pairs=pairs_std)\n",
     "\n",
     "# Make naming hopefully a bit clearer\n",
@@ -163,11 +164,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Pivot raw pairs dataset to publications dataset\n",
+    "pubs_raw = pivot_per_contributor_to_per_phd(pairs=pairs_raw)\n",
+    "\n",
+    "pubs_raw"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Export the dataset for determining the manual gold standard\n",
     "n_rows_gold_standard = 15\n",
     "seed = 42 # fixed seed\n",
-    "\n",
-    "pubs_raw = pivot_per_contributor_to_per_phd(pairs=pairs_raw)\n",
     "\n",
     "pubs_raw_sampled = pubs_raw.sample(n=n_rows_gold_standard, random_state=seed)\n",
     "\n",
@@ -179,6 +190,28 @@
     "pubs_raw_sampled.to_csv('data/raw/sampled_pubs_for_gold_standard.csv', index=False)\n",
     "\n",
     "pubs_raw_sampled"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get the same publications as the ones we sampled from pubs_raw, \n",
+    "# but this time from the cleaned publications dataset\n",
+    "# The code below will preserve the order of rows. \n",
+    "# Rows that did not survive the cleaning will be NA.\n",
+    "pubs_sampled = (\n",
+    "    pubs\n",
+    "        .set_index(\"integer_id\")\n",
+    "        .reindex(pubs_raw_sampled[\"integer_id\"])\n",
+    "        .reset_index()\n",
+    ")\n",
+    "\n",
+    "pubs_sampled.to_csv('data/cleaned/sampled_pubs_for_gold_standard.csv', index=False)\n",
+    "\n",
+    "pubs_sampled"
    ]
   },
   {
